# Google-Maps-Elevation

./: .env.example  .gitignore  COMPLETION_REPORT.txt  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TODO.md  config.yaml  examples.py  google_maps_api.py  main.py  pyproject.toml  requirements.txt  test_model.py
docs/: BayesianOptimization - Copy.ipynb  Instructions.txt  MODEL_STRUCTURE.md  Makefile  Notes.txt  Remaining_problems_API_setup.rst  conf.py  index.rst  make.bat
models/: GPModel.py
notebooks/: global_heatmaps.ipynb  hyperparameter_analysis.ipynb  method_comparison.ipynb
references/: BayesianOptimization_Exercise_3.ipynb  BayesianOptimization_Exercise_4_skopt.ipynb
reports/: global_temperature_map.html  hyperparameter_tuning_results.csv  hyperparameter_tuning_summary.csv  peak_hunter.html  playback.html  results_bayesian.csv  results_grid.csv  results_random.csv
src/data/: data_manager.py  results.csv  weather_api.py
src/features/: build_features.py
src/models/: bayesian_optimizer.py  hyperparameter_tuning.py  manual_search.py  optimizer.py  random_search.py  train_model.py
src/visualization/: generate_dashboard.py  generate_playback.py  make_map.py  visualize.py
tests/: test_data_manager.py  test_evaluation.py  test_manual_search.py  test_random_search.py
