[project]
name = "google-maps-elevation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "googlemaps>=4.10.0",
    "python-dotenv>=1.2.1",
    "cookiecutter>=2.6.0",
    "requests>=2.32.5",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "nbformat>=5.10.4",
    "ipykernel>=7.2.0",
    "folium>=0.20.0",
    "cartopy>=0.25.0",
]
