[project]
name = "google-maps-elevation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "googlemaps>=4.10.0",
    "python-dotenv>=1.2.1",
    "cookiecutter>=2.6.0",
    "requests>=2.32.5",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "pytest>=7.0.0",
]
